<resources>
    <string name="app_name">CUCI-IN</string>
    <string name="welcome">Welcome\nBack</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Sign Up</string>
    <string name="register_str">Don\'t have any account ? </string>
    <string name="description_text">Aplikasi yang memudahkan anda\ndalam mencuci pakaian anda</string>
    <string name="create_account">Create\nAccount</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="already_account">Already have an account ?</string>
    <string name="detail_transaksi">Detail Transaksi</string>
    <string name="order">Order</string>
    <string name="nama_laundry">Nama Laundry</string>
    <string name="lokasi">Lokasi</string>
    <string name="informasi_pembayaran">Informasi Pembayaran</string>
    <string name="item">Item</string>
    <string name="berat">Berat</string>
    <string name="harga_satuan">Harga Satuan</string>
    <string name="jumlah">Jumlah</string>
    <string name="cuci_regular">Cuci Regular</string>
    <string name="cuci_express">Cuci Express</string>
    <string name="pembatas">-------------------------------------------------------------------------</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="tracking_pemesanan">Tracking Pemesanan</string>
    <string name="filter">Filter</string>
    <string name="sort_by">sort by</string>
    <string name="tracking">Tracking Pesanan\nOrder #189</string>
    <string name="detail">Detail</string>
    <string name="time">09/01/2020\n09:40 WIB</string>
    <string name="status">Status</string>
    <string name="oprational_hours_title">Operational Hours:</string>
    <string name="open">open</string>
    <string name="closed">closed</string>
    <string name="default_rating">0.0</string>
    <string name="title_card_laundry">Title Laundry</string>
    <string name="operational_hours_default">00:00 - 00:00</string>
    <string name="kg">Kg</string>
    <string name="defalt_amount">0</string>
    <string name="search_laundry">Search Laundry</string>
    <string name="best_deals">Best Deals</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_test">Test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>